<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/topup_msg"
        android:id="@+id/tv_topup_msg"
        android:minWidth="270dp"
        android:maxWidth="400dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:gravity="center"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topup_bca"
        android:id="@+id/tv_topup_bca"
        android:textSize="40dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topup_bca_acc_no"
        android:id="@+id/tv_topup_bca_acc_no"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topup_bca_acc_name"
        android:id="@+id/tv_topup_bca_acc_name"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topup_mandiri"
        android:id="@+id/tv_topup_mandiri"
        android:textSize="40dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topup_bca_acc_no"
        android:id="@+id/tv_topup_mandiri_acc_no"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topup_bca_acc_name"
        android:id="@+id/tv_topup_mandiri_acc_name"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:minWidth="@dimen/btn_minwidth_vert"
        android:text="@string/topup_confirm"
        android:id="@+id/topup_confirm"
        android:layout_gravity="center_horizontal" />

</LinearLayout>