<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mkios_credit_tranfer_msg"
        android:id="@+id/tv_mkios_credit_tranfer_msg"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/medium_mrgn"
        android:layout_marginTop="@dimen/medium_mrgn"
        android:paddingLeft="@dimen/medium_mrgn"
        android:paddingRight="@dimen/medium_mrgn"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_mkios_credit_tranfer_enter_phone_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mkios_credit_transfer_phone_target"
            android:inputType="phone"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_mkios_credit_transfer_nominal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mkios_credit_transfer_nominal"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:minWidth="@dimen/btn_minwidth_vert"
        android:text="@string/lbl_btn_send"
        android:id="@+id/btn_mkios_credit_transfer_send"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mkios_credit_transfer_ask_topup_cr_telkomsel"
        android:id="@+id/tv_mkios_credit_transfer_ask_topup_cr_telkomsel"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:minWidth="@dimen/btn_minwidth_vert"
        android:text="@string/mkios_credit_transfer_btn_topup"
        android:id="@+id/btn_mkios_credit_transfer_btn_topup"
        android:layout_gravity="center_horizontal" />

</LinearLayout>